kube-lab/backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: back
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: back
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: alfesito/mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: adminer-deployment
#   namespace: back
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: adminer
#   template:
#     metadata:
#       labels:
#         app: adminer
#     spec:
#       containers:
#         - name: adminer
#           image: alfesito/adminer
#           ports:
#             - containerPort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: adminer-service
#   namespace: back
# spec:
#   selector:
#     app: adminer
#   ports:
#    - port: 8080
