kube-lab/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana
    service: grafana-service
spec:
  ports:
  - port: 3000
  selector:
    app: grafana
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      version: v1
  template:
    metadata:
      labels:
        app: grafana
        version: v1
    spec:
      serviceAccountName: developer
      hostNetwork: true
      hostPID: true
      hostIPC: true
      containers:
      - name: grafana
        image: grafana/grafana-enterprise:8.3.0-beta2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
