kube-lab/php-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-page
  labels:
    app: php-page
    service: php-page
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: php-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-page
  namespace: default
  labels:
    app: php-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-page
      version: v1
  template:
    metadata:
      labels:
        app: php-page
        version: v1
    spec:
      serviceAccountName: web
      containers:
      - name: php-page
        image: alfesito/php-page:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
