kube-lab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-localhost
  namespace: front
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: php.internal
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: php-page
                port:
                  number: 80
